chore(cache): avoid reading tenant where possible (#2649)
* Cache tenantId in PlatformService
* Don't get entire tenant where only ID is needed
* Use default tenant everywhere (instead of getTenant(String id)), as there is only one tenant

* chore(cache): simplify getClientTenantConfigurations()